# python-project-lvl2

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  pytest.yml
gendiff/: __init__.py  cli.py  differentiator.py  parsers.py  tree_builder.py  utils.py
gendiff/formatter/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: result_json.json
tests/: test_gendiff.py
