[tool.poetry]
name = "gstr169_gendiff"
version = "0.2.0"
description = "Generates diff."
authors = ["d.finko <dmit.finn@yandex.ru>"]
repository = "https://github.com/gstr169/python-project-lvl2"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.1.1"
coverage = "^5.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
